# Paralel_Computers_GPU_CPP

./: CMakeLists.txt  main.cpp
